--- a/supervisor/container-files/etc/supervisord.conf
+++ b/supervisor/container-files/etc/supervisord.conf
@@ -4,7 +4,7 @@ pidfile = /run/supervisord.pid
 logfile = /data/logs/supervisord.log
 # Set loglevel=debug, only then all logs from child services are printed out
 # to container logs (and thus available via `docker logs [container]`
-loglevel = debug
+loglevel = info
 
 # These two (unix_http_server, rpcinterface) are needed for supervisorctl to work
 [inet_http_server]
