add tweb & wget

--- a/transcoder/Dockerfile
+++ b/transcoder/Dockerfile
@@ -4,9 +4,12 @@ RUN apk add --no-cache \
         bash \
         build-base \
         python-dev \
+        wget \
         curl \
         ffmpeg \
         py-pip
-
+COPY tweb-0.3.2.tar.gz /tmp
 RUN \
-    pip install --upgrade b2
+    pip install --upgrade b2 && \
+    pip install /tmp/tweb-0.3.2.tar.gz && \
+    rm /tmp/tweb-0.3.2.tar.gz
